--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,9 @@
   <title>Snowpack</title>
 </head>
 <body>
-  <h1>Welcome</h1>
-  <script type="module" src="/index.js"></script>
+  <script type="module">
+    import { value } from './example'
+    document.body.innerHTML = "<h1>" + value + "</h1>"
+  </script>
 </body>
 </html>
