put root script into index.js

--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,9 @@
 <head>
   <meta charset="utc-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Snowpack</title>
+  <title>Snowpack Coverage Issue</title>
 </head>
 <body>
-  <script type="module">
-    import { value } from './example'
-    document.body.innerHTML = "<h1>" + value + "</h1>"
-  </script>
+  <script type="module" src="/index.js"></script>
 </body>
 </html>
